<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/titleColor">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/title_activity_login" />
    </FrameLayout>


    <ScrollView

        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_login_shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/abc_list_pressed_holo_light"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/phone_number"
                    android:textSize="16sp"
                    tools:ignore="PrivateResource" />

                <EditText
                    android:id="@+id/account_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/edit_import"
                    android:hint="@string/hint_put_phonenumber"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"

                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_login_shape"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/abc_list_pressed_holo_light"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/password"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pwd_et"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:background="@drawable/edit_import"
                    android:hint="@string/hint_put_pwd"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:singleLine="true" />
            </LinearLayout>

            <TextView
                android:padding="8dp"
                android:gravity="center"
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/bg_login_btn_shape"
                android:text="@string/title_activity_login"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="32dp">

                <TextView
                    android:id="@+id/regist_account_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/regist_account"
                    android:textColor="@color/titleColor"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/forget_pwd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/forget_pwd"
                    android:textColor="@color/titleColor"
                    android:textSize="15sp" />
            </RelativeLayout>


            <TextView
                android:id="@+id/findPwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="36dp"
                android:text="@string/refind_pwd_methad"
                android:textColor="@color/titleColor" />

            <LinearLayout
                android:id="@+id/findPwd_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/msg_goto_net"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@mipmap/find_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/query"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>