<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:orientation="vertical"
    tools:context=".fragment.Self_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/titleColor">

        <TextView
            style="@style/TitleTextStyle"
            android:text="@string/self" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/userInfo_self"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingTop="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:paddingLeft="7dp"
            android:paddingStart="7dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:id="@+id/userName_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:padding="3dp"
                android:text="用户名"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ID_number_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="3dp"
                android:text="421126199301061413" />
        </LinearLayout>

        <TextView
            android:id="@+id/userNoTv_self"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:text="用户编号：43913"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <TextView
        android:id="@+id/shouquanList_tv"
        style="@style/SelfTextView"
        android:layout_marginTop="10dp"
        android:text="@string/list_shouquan" />

    <TextView
        android:id="@+id/about_tv"
        style="@style/SelfTextView"
        android:layout_marginTop="2dp"
        android:text="@string/about" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_weight="1"
        android:background="@android:color/white" />
</LinearLayout>